src/components/AgendaDogs/agendaDogs.css
.agendaCalendar {
    max-width: 98dvw;
    margin-top: 46px;
}
.select-dog-week {
    font-size: 1.1rem;
    margin: 6px 0px;
    > select {
        font-size: 1rem;
    }
}
.table-Agenda{
    max-width: 98dvw;
    overflow-x: scroll !important;
}
th, td {
    border: 1px solid black;
    min-width: 70px !important;
    max-width: 70px !important;
    overflow: hidden;
}
.horas{
   max-width: 30px !important;
   min-width: 30px !important;
}

